# starting-ragchatbot-codebase

./: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  setup.sh  test.sh
